<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".app.authentication.login.LoginActivity">

    <LinearLayout
        android:id="@+id/relative_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="andrew&apos;s meditation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="false"
            android:src="@drawable/ic_launcher_icon_large"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/edit_text_padding"
            app:errorTextAppearance="@style/TextAppearance.AppCompat"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/text_color"
                android:theme="@style/EditTextLayout"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_normal"
            app:errorTextAppearance="@style/TextAppearance.AppCompat"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/text_color"
                android:theme="@style/EditTextLayout"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_with_password"
            style="@style/Widget.BetterBetter.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:background="@color/primary_button_color"
            android:onClick="onSignInPressed"
            android:text="@string/button_signin_with_password"
            android:textColor="@android:color/white"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_dont_have_account"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignUpPressed"
                android:text="@string/button_create_account"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
