<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_dark"
                android:orientation="vertical">

    <ImageButton
        android:id="@+id/track_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:src="@drawable/ic_clear_24dp"
        android:tint="@android:color/white"
        android:background="@color/primary_dark"/>


    <TextView
        android:id="@+id/track_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:transitionName="titleView"
        tools:text="15 Minute Meditation"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/track_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:transitionName="descriptionView"
        tools:text="This is a test, a test, a test, a test."
        android:layout_below="@+id/track_title"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center"/>


    <ImageView
        android:id="@+id/track_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/track_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/track_image_description"
        android:scaleType="centerCrop"
        android:transitionName="imageView"/>

    <ProgressBar
        android:id="@+id/audioProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/track_time_description"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        tools:text="16:02"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/reset_recording"
            android:layout_width="@dimen/playback_controls_albumart_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/reset_button_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_replay_10_black_24dp"
            android:tint="@android:color/white"
            android:background="@color/primary_dark"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            >

            <ImageButton
                android:id="@+id/play"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/play_pause"
                android:scaleType="centerCrop"
                android:src="@drawable/play"
                android:tint="@android:color/white"
                android:background="@color/primary_dark"/>

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/play_pause"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_pause_24dp"
                android:tint="@android:color/white"
                android:visibility="invisible"
                android:background="@color/primary_dark"/>



        </FrameLayout>

        <ImageButton
            android:id="@+id/fast_forward"
            android:layout_width="@dimen/playback_controls_albumart_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/fast_forward_button_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_fast_forward_24dp"
            android:tint="@android:color/white"
            android:background="@color/primary_dark"/>

    </LinearLayout>

</RelativeLayout>