<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey">

    <include
        android:id="@+id/toolbar_main_activity"
        layout="@layout/main_toolbar"/>

    <LinearLayout
        android:id="@+id/main_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_main_activity"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp">

        <Button
            android:id="@+id/meditation_button"
            style="@style/Widget.BetterBetter.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_queue_music_24dp"
            android:drawableStart="@drawable/ic_queue_music_24dp"
            android:elevation="2dp"
            android:text="@string/meditate"
            android:textColor="@color/light_black"
            />

        <Button
            android:id="@+id/journal_button"
            style="@style/Widget.BetterBetter.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_journal_pencil_icon"
            android:drawableStart="@drawable/ic_journal_pencil_icon"
            android:elevation="2dp"
            android:text="@string/journal"
            android:textColor="@color/light_black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_user_recent_activity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_button_layout"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_user_recent_activity"
            />

        <TextView
            android:id="@+id/text_current_user_recent_activity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/users_recent_activity_text"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/summary_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_user_recent_activity_label"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:id="@+id/recent_activity_layout_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/summary_fragment"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_supervisor_account_black_24dp"
            />

        <TextView
            android:id="@+id/text_recent_activity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/recent_activity"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/summary_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recent_activity_layout_label"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</RelativeLayout>